2003-03-10

	* ctype.cc: fixed bug (introduced in 2.3b1) in cLinkType constructor 
	which eventually caused NED channels not to work.

2003-02-15  ------ omnetpp-2.3b1 released ------

2003-02-15  Andras Varga

	* chist.cc: fix: clearResult() now doesn't reset num_cells.

	* To be done in the future: observation count and histogram cell values
	should be made unsigned long, and when obs. count would overflow, 
	issue a warning and ignore further collect() calls. Also TBD: 
	check for integer overflows in cKSplit and cPSquare.

2003-02-14  Andras Varga

	* cpar.cc: getAsText(): better handling of long string values

2003-02-11  Andras Varga

	* distrib.cc: bugfix in beta()
	* cexception.h: added missing includes string.h and stdarg.h

2003-02-10  Andras Varga

	* chist.cc: cEqdHistogramBase: collectTransformed() and pdf() made 
	safer (floating-point rounding errors could cause addressing out
	of cellv[] array)

2003-01-30  Andras Varga

	* added handling of new MathFunc4Args where needed

2003-01-23  Andras Varga

	* NOTE about Fibers, the Win32 API used to implement activity()
	on Windows. The number of fibers (that is, the number of modules
	using activity() in a network) is limited by the available memory
	and the available address space according to the following.
	Each fiber has its own stack, by default 1MB (this is the "reserved"
	stack space -- i.e. reserved in the address space, but not the full
	1MB is actually "committed", i.e. has physical memory assigned to it).
	This means that a 2GB address space will run out after 2048 fibers,
	which is way too few. (In practice, you won't even be able to create
	this many fibers, because physical memory is also a limiting factor).
	Therefore, the 1MB reserved stack size (RSS) must be set to a smaller
	value: the coroutine stack size requested for the module, plus
	extra-stack-for-envir, the sum of the two typically around 32K.
	Unfortunately, the CreateFiber() Win32 API doesn't allow the RSS to be